<resources>
    <string name="app_name">EasyCamp</string>

    <string name="username_hint">Nombre de usuario</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="user_not_found">Usuario no encontrado</string>
    <string name="incorrect_password">Contraseña incorrecta</string>
...
        detallecampamentoDetailHostActivity
    </string>
    <string name="title_detallecampamento_list">detalle_campamentos</string>
    <string name="title_detallecampamento_detail">detalle_campamento Detail</string>
    <string name="title_activity_detalle_campamento">DetalleCampamentoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="text_lupa">Buscar campamento</string>
    <string name="text_cuenta">Usuario</string>
    <string name="text_tareas">Tareas</string>
    <string name="text_herramientas">Herramientas</string>
    <string name="navigation_campamentos">Campamentos</string>
    <string name="navigation_inscritos">Inscripciones</string>
    <string name="navigation_cuenta">Cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_resumen">Resumen</string>
...
    <string name="nombre_hint">Nombre</string>
    <string name="apellidos_hint">Apellidos</string>
    <string name="edad_hint">Edad</string>
    <string name="seleccionar_tipo">Seleccionar Tipo</string>
    <string name="confirmar_button">Confirmar</string>
    <string name="text_registrarse">Registrarse</string>
    <string name="boton_lista_asistentes">Lista asistentes</string>
    <string name="boton_vehiculos">Vehiculos</string>
    <string name="boton_ubicaciones">Ubicaciones</string>
    <string name="boton_documentos">Documentos</string>
    <string name="tituloTarea">Titulo tarea</string>
    <string name="descripcionTarea">Descripcion de la tarea</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
...

        <!-- Para CuentaTrabajadorFragment -->
        <string name="titulo_cuenta_trabajador">Mi Cuenta como Trabajador</string>
    <string name="descripcion_cuenta_trabajador">Visualiza y edita la información de tu cuenta como trabajador.</string>

        <!-- Para los nuevos elementos del BottomNavigationView en CoordinadorActivity -->
        <string name="menu_perfil_coordinador">Perfil</string>
    <string name="menu_crear_campamento">Crear Campamento</string>

        <!-- Para PerfilCoordinadorFragment -->
        <string name="titulo_perfil_coordinador">Mi Perfil como Coordinador</string>
    <string name="descripcion_perfil_coordinador">Visualiza y edita la información de tu perfil como coordinador.</string>

...
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="añadir_a_campamento">Apuntar</string>
    <string name="apuntar_hijo">Apuntar</string>
    <string name="horaTarea">Hora de la tarea</string>
    <string name="text_inscritos">Inscritos</string>
    <string name="boton_tareas">Tareas</string>
    <string name="menu_crear_campamento">Campamento</string>
    <string name="menu_perfil">Perfil</string>
    <string name="title_activity_detalle_asistentes">DetalleAsistentesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
...
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="boton_aceptados">Campamentos aceptados</string>
    <string name="navigation_trabajadores">Trabajadores</string>
    <string name="navigation_asistentes">Lista asistentes</string>
</resources>
