<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/buscador_trabajador"
        android:enabled="true"
        android:icon="@drawable/icon_search"
        android:title="@string/text_lupa"/>
    <item
        android:id="@+id/inscritos_trabajador"
        android:enabled="true"
        android:icon="@drawable/icon_tareas"
        android:title="@string/text_inscritos"/>
    <item
        android:id="@+id/herramientas_trabajador"
        android:enabled="true"
        android:icon="@drawable/icon_herramienta"
        android:title="@string/text_herramientas"/>
    <item
        android:id="@+id/perfil_trabajador"
        android:enabled="true"
        android:icon="@drawable/icon_account"
        android:title="@string/text_cuenta"/>
</menu>